chore: comment out Git Sync Status Indicator in layout

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -42,7 +42,7 @@
     </div>
     
     <!-- Git Sync Status Indicator (Flipt v2) -->
-    <app-git-sync-status></app-git-sync-status>
+    <!-- <app-git-sync-status></app-git-sync-status> -->
     
     <div class="content-wrapper">
       <router-outlet></router-outlet>
